fix: 🐛 wrap button text for mobile

--- a/src/style.css
+++ b/src/style.css
@@ -129,5 +129,7 @@ section {
 
   .copy-btn {
     width: auto;
+    white-space: initial;
   }
 }
+
